# MAS_gtmProject

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  vercel.json
config/: settings.py
docs/: SYSTEM_DESIGN.md
frontend/: index.html  package-lock.json
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: CompanyCard.tsx  ExecutionTimeline.tsx  QueryInput.tsx  StatsBar.tsx
src/agents/: __init__.py  base.py  critic.py  enrichment.py  gtm_strategy.py  json_utils.py  planner.py  retrieval.py
src/api/: server.py
src/memory/: __init__.py  session_memory.py
src/models/: schemas.py
src/orchestrator/: __init__.py  pipeline.py
src/scoring/: __init__.py  icp_scorer.py
src/signals/: __init__.py  signal_engine.py
src/tools/: data_sources.py  llm_client.py  llm_data_source.py  llm_signal_providers.py  pdf_report.py  signal_providers.py
tests/: test_api.py  test_critic_rules.py  test_icp_scorer.py  test_memory.py  test_pipeline_integration.py
