[project]
name = "outmate-ai"
version = "0.1.0"
description = "Multi-Agent GTM Intelligence System"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.1",
    "httpx>=0.27",
    "google-genai>=1.0",
    "reportlab>=4.0",
    "eval_type_backport>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "requests>=2.31",
]
anthropic = [
    "anthropic>=0.40",
]
groq = [
    "groq>=0.11",
]
openai = [
    "openai>=1.0",
]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
